plugins {
    id 'java'
}
//правильно
allprojects {
    group = 'org.lovesoa'
//    version = '1.0.0'

    repositories {
        mavenCentral()
        maven {
            url 'https://nexus.payara.fish/repository/payara-community'
        }
    }
}

dependencies {
    implementation("io.jsonwebtoken:jjwt-api:0.11.5")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")
    compileOnly("org.projectlombok:lombok")
    annotationProcessor("org.projectlombok:lombok")
}

subprojects {
    apply plugin: 'java'

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    tasks.register("prepareKotlinBuildScriptModel") {
    }
}
